--- a/index.html
+++ b/index.html
@@ -2,34 +2,63 @@
 <html>
 
 <head>
-<title>Kaali AI</title>
+
+<title>Kaali AI - DEJOIY</title>
 
 <style>
 
 body{
+background:linear-gradient(135deg,#0f2027,#203a43,#2c5364);
 font-family:Arial;
+margin:0;
+color:white;
 text-align:center;
-margin-top:50px;
 }
 
-#chat{
-width:400px;
+h1{
+margin-top:50px;
+font-size:40px;
+}
+
+#chatbox{
+
 margin:auto;
-border:1px solid gray;
+margin-top:40px;
+width:400px;
+background:#111;
+border-radius:20px;
 padding:20px;
-border-radius:10px;
+box-shadow:0px 0px 40px rgba(0,0,0,0.5);
+
 }
 
 input{
+
 width:70%;
-padding:10px;
+padding:12px;
+border-radius:10px;
+border:none;
+
 }
 
 button{
-padding:10px;
-background:black;
-color:white;
+
+padding:12px 20px;
+background:#00c3ff;
 border:none;
+border-radius:10px;
+color:white;
+font-weight:bold;
+
+}
+
+#messages{
+
+margin-top:20px;
+text-align:left;
+max-height:300px;
+overflow:auto;
+
 }
 
 </style>
@@ -38,11 +67,11 @@ border:none;
 
 <body>
 
-<h2>Kaali AI Assistant</h2>
+<h1>Kaali AI Assistant</h1>
 
-<div id="chat">
+<div id="chatbox">
 
-<input id="input" placeholder="Ask Kaali..." />
+<input id="input" placeholder="Ask Kaali anything..." />
 
 <button onclick="send()">Send</button>
 
@@ -83,5 +112,4 @@ document.getElementById("messages").innerHTML+=
 </script>
 
 </body>
-
 </html>
