--- a/index.html
+++ b/index.html
@@ -1,14 +1,149 @@
+<!DOCTYPE html>
+<html>
+
+<head>
+<title>Kaali AI</title>
+
+<style>
+
+body{
+
+background:black;
+color:white;
+font-family:Arial;
+text-align:center;
+
+}
+
+
+.logo{
+
+width:120px;
+margin-top:40px;
+
+}
+
+h1{
+
+color:gold;
+font-size:50px;
+
+}
+
+
+.chatbox{
+
+background:#111;
+width:600px;
+margin:auto;
+padding:30px;
+border-radius:20px;
+box-shadow:0px 0px 30px gold;
+
+}
+
+
+input{
+
+width:70%;
+padding:15px;
+border-radius:10px;
+border:none;
+font-size:18px;
+
+}
+
+
+button{
+
+background:gold;
+border:none;
+padding:15px 25px;
+border-radius:10px;
+font-size:18px;
+cursor:pointer;
+
+}
+
+
+#messages{
+
+margin-top:20px;
+text-align:left;
+height:250px;
+overflow:auto;
+
+}
+
+
+</style>
+
+</head>
+
+
+<body>
+
+
+<img src="kaali.png" class="logo">
+
+<h1>KAALI AI</h1>
+
+
+<div class="chatbox">
+
+<input id="input" placeholder="Ask Kaali anything">
+
+<button onclick="send()">Send</button>
+
+
+<div id="messages"></div>
+
+</div>
+
+
+
+<script>
+
+
+// Conversation Memory
+
+let history=[];
+
+
+
 async function send(){
 
-let input = document.getElementById("input");
+let input=document.getElementById("input");
 
-let msg = input.value;
+let msg=input.value;
 
 if(!msg) return;
 
 input.value="";
 
-let res = await fetch("/api/chat",{
+
+// Show User Message
+
+document.getElementById("messages").innerHTML+=
+
+"<p><b>You:</b> "+msg+"</p>";
+
+
+// Save Memory
+
+history.push({
+
+role:"user",
+content:msg
+
+});
+
+
+
+
+// Send to API
+
+let res=await fetch("/api/chat",{
 
 method:"POST",
 
@@ -17,30 +152,67 @@ headers:{
 },
 
 body:JSON.stringify({
-message:msg
+
+messages:history
+
 })
 
 });
 
-let data = await res.json();
+
+let data=await res.json();
+
+
+
+// Save Reply
+
+history.push({
+
+role:"assistant",
+content:data.reply
+
+});
+
+
+
+// Show Reply
 
 document.getElementById("messages").innerHTML+=
-"<p><b>You:</b> "+msg+"</p>";
 
-document.getElementById("messages").innerHTML+=
 "<p><b>Kaali:</b> "+data.reply+"</p>";
+
+
+
+// Auto Scroll
+
+let box=document.getElementById("messages");
+
+box.scrollTop=box.scrollHeight;
 
 }
 
 
-// ENTER KEY
 
-document.getElementById("input").addEventListener("keydown", function(e){
 
-if(e.key === "Enter"){
+// ENTER KEY SUPPORT
+
+document.getElementById("input")
+
+.addEventListener("keydown",function(e){
+
+if(e.key==="Enter"){
 
 send();
 
 }
 
 });
+
+
+
+</script>
+
+
+</body>
+
+</html>
