--- a/index.html
+++ b/index.html
@@ -2,79 +2,60 @@
 <html>
 
 <head>
+
 <title>Kaali AI</title>
 
 <style>
 
 body{
-
 background:black;
 color:white;
 font-family:Arial;
 text-align:center;
-
 }
 
-
 .logo{
-
 width:120px;
 margin-top:40px;
-
 }
 
 h1{
-
 color:gold;
 font-size:50px;
-
 }
 
-
 .chatbox{
-
 background:#111;
 width:600px;
 margin:auto;
 padding:30px;
 border-radius:20px;
 box-shadow:0px 0px 30px gold;
-
 }
 
-
 input{
-
 width:70%;
 padding:15px;
 border-radius:10px;
 border:none;
 font-size:18px;
-
 }
 
-
 button{
-
 background:gold;
 border:none;
 padding:15px 25px;
 border-radius:10px;
 font-size:18px;
 cursor:pointer;
-
 }
-
 
 #messages{
-
 margin-top:20px;
 text-align:left;
-height:250px;
+height:300px;
 overflow:auto;
-
 }
-
 
 </style>
 
@@ -95,7 +76,6 @@ overflow:auto;
 
 <button onclick="send()">Send</button>
 
-
 <div id="messages"></div>
 
 </div>
@@ -105,17 +85,32 @@ overflow:auto;
 <script>
 
 
-// Conversation Memory
+// ========================
+// KAALI MEMORY + WELCOME
+// ========================
 
-let history=[];
+let history=[
+{
+role:"assistant",
+content:"✨ Namaste! I am KAALI, your mystical guide at DEJOIY. How may I assist you today?"
+}
+];
+
+document.getElementById("messages").innerHTML=
+"<p><b>Kaali:</b> ✨ Namaste! I am KAALI, your mystical guide at DEJOIY. How may I assist you today?</p>";
 
 
+
+
+// ========================
+// SEND MESSAGE
+// ========================
 
 async function send(){
 
 let input=document.getElementById("input");
 
-let msg=input.value;
+let msg=input.value.trim();
 
 if(!msg) return;
 
@@ -125,11 +120,11 @@ input.value="";
 // Show User Message
 
 document.getElementById("messages").innerHTML+=
-
 "<p><b>You:</b> "+msg+"</p>";
 
 
-// Save Memory
+
+// Save User Memory
 
 history.push({
 
@@ -164,7 +159,7 @@ let data=await res.json();
 
 
 
-// Save Reply
+// Save Reply Memory
 
 history.push({
 
@@ -175,11 +170,12 @@ content:data.reply
 
 
 
+
 // Show Reply
 
 document.getElementById("messages").innerHTML+=
-
 "<p><b>Kaali:</b> "+data.reply+"</p>";
+
 
 
 
@@ -194,7 +190,9 @@ box.scrollTop=box.scrollHeight;
 
 
 
+// ========================
 // ENTER KEY SUPPORT
+// ========================
 
 document.getElementById("input")
 
