--- a/index.html
+++ b/index.html
@@ -7,41 +7,43 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<!-- KAALI FAVICON -->
 <link rel="icon" type="image/png" href="kaali.png">
 
 <style>
 
 /* ================= BODY ================= */
 
-body{
+html,body{
+
+margin:0;
+padding:0;
 
 background:black;
 color:white;
 font-family:Arial;
 
-margin:0;
-padding:0;
+height:100%;
+overflow:hidden;
 
 display:flex;
 justify-content:center;
 
-height:100vh;
-
 }
 
 
-/* ================= MAIN CONTAINER ================= */
+/* ================= MAIN ================= */
 
 .container{
 
 width:100%;
-max-width:900px;
+max-width:420px;
+
+height:100%;
 
 display:flex;
 flex-direction:column;
 
-height:100vh;
+background:black;
 
 }
 
@@ -51,91 +53,75 @@ height:100vh;
 .header{
 
 text-align:center;
-
-padding:15px;
+padding:12px;
 
 border-bottom:1px solid #222;
 
 }
 
-
 .logo{
 
-width:90px;
-
+width:70px;
 animation:glow 3s infinite;
 
 }
 
-
 .title{
 
 color:gold;
-
-font-size:30px;
-
+font-size:22px;
 margin-top:5px;
 
 }
 
 
-
-/* ================= CHAT AREA ================= */
+/* ================= CHAT ================= */
 
 #messages{
 
 flex:1;
 
-overflow:auto;
+overflow-y:auto;
 
-padding:20px;
+padding:15px;
 
 }
 
 
-
-/* ================= MESSAGE BUBBLES ================= */
+/* ================= MESSAGES ================= */
 
 .user{
 
 background:#222;
-
-padding:12px;
-
+padding:10px;
 border-radius:12px;
+margin:6px;
 
-margin:8px;
-
-animation:fadeIn 0.4s ease;
+animation:fadeIn .4s;
 
 }
 
 
 .kaali{
 
-background:black;
-
+background:#000;
 border-left:4px solid gold;
-
-padding:12px;
-
+padding:10px;
 border-radius:12px;
+margin:6px;
 
-margin:8px;
-
-animation:fadeIn 0.6s ease;
+animation:fadeIn .6s;
 
 }
 
 
-
-/* ================= INPUT AREA ================= */
+/* ================= INPUT ================= */
 
 .inputArea{
 
 display:flex;
 
-padding:15px;
+padding:10px;
 
 border-top:1px solid #222;
 
@@ -148,18 +134,17 @@ input{
 
 flex:1;
 
-padding:14px;
+padding:12px;
 
-border-radius:12px;
+border-radius:10px;
 
 border:none;
 
-font-size:16px;
+font-size:15px;
 
 outline:none;
 
 }
-
 
 
 button{
@@ -168,17 +153,15 @@ background:gold;
 
 border:none;
 
-padding:14px 25px;
+padding:12px 20px;
 
-border-radius:12px;
+border-radius:10px;
 
-margin-left:10px;
+margin-left:8px;
 
 cursor:pointer;
 
 font-weight:bold;
-
-transition:0.3s;
 
 }
 
@@ -190,17 +173,15 @@ background:#ffd700cc;
 }
 
 
-
-/* ================= ANIMATIONS ================= */
+/* ================= ANIMATION ================= */
 
 @keyframes glow{
 
 0%{filter:drop-shadow(0px 0px 2px gold);}
-50%{filter:drop-shadow(0px 0px 15px gold);}
+50%{filter:drop-shadow(0px 0px 12px gold);}
 100%{filter:drop-shadow(0px 0px 2px gold);}
 
 }
-
 
 @keyframes fadeIn{
 
@@ -217,67 +198,34 @@ transform:translateY(0);
 }
 
 
-
 /* ================= TYPING ================= */
 
 .typing{
 
 color:gold;
-
 font-style:italic;
 
-animation:pulse 1s infinite;
-
 }
 
 
-@keyframes pulse{
-
-0%{opacity:0.3}
-50%{opacity:1}
-100%{opacity:0.3}
-
-}
-
-
-
-/* ================= SCROLLBAR ================= */
+/* ================= SCROLL ================= */
 
 ::-webkit-scrollbar{
-
-width:8px;
-
+width:6px;
 }
 
 ::-webkit-scrollbar-thumb{
-
 background:gold;
 border-radius:10px;
-
 }
-
 
 
 /* ================= MOBILE ================= */
 
-@media(max-width:768px){
+@media(max-width:600px){
 
 .container{
-
 max-width:100%;
-
-}
-
-.logo{
-
-width:70px;
-
-}
-
-.title{
-
-font-size:24px;
-
 }
 
 }
@@ -308,9 +256,7 @@ font-size:24px;
 
 <!-- CHAT -->
 
-<div id="messages">
-
-</div>
+<div id="messages"></div>
 
 
 
@@ -329,23 +275,36 @@ font-size:24px;
 
 
 
-
 <script>
 
 
-// ==========================
-// MEMORY SYSTEM
-// ==========================
+/* =========================
+KAALI MEMORY
+========================= */
 
-let history=[];
+let history=[
 
-let started=false;
+{
+role:"assistant",
+content:"✨ Namaste! I am KAALI, your mystical guide at DEJOIY. How may I assist you today? 🔮"
+}
+
+];
+
+
+/* =========================
+SHOW GREETING
+========================= */
+
+document.getElementById("messages").innerHTML=
+
+"<div class='kaali'><b>KAALI:</b> ✨ Namaste! I am KAALI, your mystical guide at DEJOIY. How may I assist you today? 🔮</div>";
 
 
 
-// ==========================
-// SEND MESSAGE
-// ==========================
+/* =========================
+SEND MESSAGE
+========================= */
 
 async function send(){
 
@@ -358,34 +317,17 @@ if(!msg) return;
 input.value="";
 
 
+let box=document.getElementById("messages");
 
-// USER MESSAGE
 
-document.getElementById("messages").innerHTML+=
+/* USER MESSAGE */
+
+box.innerHTML+=
 
 "<div class='user'><b>You:</b> "+msg+"</div>";
 
 
-
-// FIRST MESSAGE LOGIC
-
-if(!started){
-
-history.push({
-
-role:"assistant",
-
-content:"✨ Namaste! I am KAALI, your mystical guide at DEJOIY. How may I assist you today? 🔮"
-
-});
-
-started=true;
-
-}
-
-
-
-// SAVE USER MESSAGE
+/* SAVE MEMORY */
 
 history.push({
 
@@ -395,14 +337,17 @@ content:msg
 });
 
 
+/* TYPING */
 
-// TYPING ANIMATION
-
-document.getElementById("messages").innerHTML+=
+box.innerHTML+=
 
 "<div class='kaali typing'>KAALI is thinking... 🔮</div>";
 
+box.scrollTop=box.scrollHeight;
 
+
+
+/* API CALL */
 
 let res=await fetch("/api/chat",{
 
@@ -424,16 +369,12 @@ messages:history
 let data=await res.json();
 
 
-
-// REMOVE TYPING
-
-let box=document.getElementById("messages");
+/* REMOVE TYPING */
 
 box.removeChild(box.lastChild);
 
 
-
-// SAVE REPLY
+/* SAVE MEMORY */
 
 history.push({
 
@@ -443,16 +384,12 @@ content:data.reply
 });
 
 
-
-// SHOW REPLY
+/* SHOW RESPONSE */
 
 box.innerHTML+=
 
 "<div class='kaali'><b>KAALI:</b> "+data.reply+"</div>";
 
-
-
-// AUTO SCROLL
 
 box.scrollTop=box.scrollHeight;
 
@@ -460,20 +397,15 @@ box.scrollTop=box.scrollHeight;
 
 
 
-
-// ==========================
-// ENTER KEY SUPPORT
-// ==========================
+/* =========================
+ENTER KEY
+========================= */
 
 document.getElementById("input")
 
 .addEventListener("keydown",function(e){
 
-if(e.key==="Enter"){
-
-send();
-
-}
+if(e.key==="Enter") send();
 
 });
 
