--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
 
 <title>KAALI AI</title>
@@ -11,8 +10,6 @@
 
 <style>
 
-/* ===== BODY ===== */
-
 html,body{
 margin:0;
 padding:0;
@@ -20,20 +17,25 @@ background:black;
 color:white;
 font-family:Arial;
 height:100%;
-overflow:hidden;
 }
 
-/* ===== CONTAINER ===== */
+/* Auto resize for widget vs fullpage */
 
 .container{
+
 width:100%;
-max-width:420px;
+max-width:900px;
+
 height:100%;
+
+margin:auto;
+
 display:flex;
 flex-direction:column;
+
 }
 
-/* ===== HEADER ===== */
+/* Header */
 
 .header{
 text-align:center;
@@ -42,70 +44,85 @@ border-bottom:1px solid #222;
 }
 
 .logo{
-width:60px;
+width:70px;
 animation:glow 3s infinite;
+cursor:pointer;
 }
 
 .title{
 color:gold;
-font-size:20px;
+font-size:22px;
 }
 
-/* ===== CHAT ===== */
+/* Messages */
 
 #messages{
+
 flex:1;
-overflow-y:auto;
-padding:10px;
+overflow:auto;
+padding:15px;
+
 }
 
-/* ===== MESSAGES ===== */
-
 .user{
+
 background:#222;
 padding:10px;
 border-radius:10px;
 margin:6px;
+
 }
 
 .kaali{
-background:#000;
+
+background:black;
 border-left:4px solid gold;
 padding:10px;
 border-radius:10px;
 margin:6px;
+
 }
 
-/* ===== INPUT ===== */
+.typing{
+color:gold;
+}
+
+/* Input */
 
 .inputArea{
+
 display:flex;
 padding:10px;
 border-top:1px solid #222;
+
 }
 
 input{
+
 flex:1;
-padding:10px;
+padding:12px;
 border-radius:10px;
 border:none;
+
 }
 
 button{
+
 background:gold;
 border:none;
-padding:10px 14px;
-border-radius:10px;
+padding:10px 16px;
 margin-left:5px;
+border-radius:10px;
 cursor:pointer;
+
 }
 
-/* ===== GLOW ===== */
-
 @keyframes glow{
+
 0%{filter:drop-shadow(0px 0px 2px gold);}
 50%{filter:drop-shadow(0px 0px 12px gold);}
 100%{filter:drop-shadow(0px 0px 2px gold);}
+
 }
 
 </style>
@@ -124,19 +141,17 @@ cursor:pointer;
 
 </div>
 
-
 <div id="messages"></div>
-
 
 <div class="inputArea">
 
-<input id="input" placeholder="Ask Kaali anything">
+<input id="input" placeholder="Ask KAALI anything...">
 
 <button onclick="send()">Send</button>
 
-<button onclick="voiceInput()">🎤</button>
+<button onclick="record()">🎤</button>
 
-<button onclick="speakLast()">🔊</button>
+<button onclick="speak(lastReply)">🔊</button>
 
 </div>
 
@@ -144,25 +159,28 @@ cursor:pointer;
 
 <script>
 
-/* ===== MEMORY ===== */
+/* Memory */
 
-let history=[
-
-{
-role:"assistant",
-content:"✨ Namaste! I am KAALI, your mystical guide at DEJOIY. How may I assist you today? 🔮"
-}
-
-];
-
-document.getElementById("messages").innerHTML=
-
-"<div class='kaali'><b>KAALI:</b> ✨ Namaste! I am KAALI, your mystical guide at DEJOIY. How may I assist you today? 🔮</div>";
+let history=[];
 
 let lastReply="";
 
 
-/* ===== SEND ===== */
+/* Greeting */
+
+let greeting="✨ Namaste! I am KAALI, your mystical guide at DEJOIY. How may I assist you today? 🔮";
+
+document.getElementById("messages").innerHTML=
+
+"<div class='kaali'>"+greeting+"</div>";
+
+history.push({
+role:"assistant",
+content:greeting
+});
+
+
+/* Send */
 
 async function send(){
 
@@ -177,15 +195,21 @@ input.value="";
 let box=document.getElementById("messages");
 
 box.innerHTML+=
-"<div class='user'><b>You:</b> "+msg+"</div>";
+
+"<div class='user'>"+msg+"</div>";
 
 history.push({
+
 role:"user",
 content:msg
+
 });
 
+
 box.innerHTML+=
-"<div class='kaali'>Kaali is thinking 🔮</div>";
+
+"<div class='kaali typing'>KAALI is thinking...</div>";
+
 
 let res=await fetch("/api/chat",{
 
@@ -196,81 +220,95 @@ headers:{
 },
 
 body:JSON.stringify({
+
 messages:history
+
 })
 
 });
+
 
 let data=await res.json();
 
 box.removeChild(box.lastChild);
 
-history.push({
-role:"assistant",
-content:data.reply
-});
-
 lastReply=data.reply;
 
+history.push({
+
+role:"assistant",
+content:data.reply
+
+});
+
+
 box.innerHTML+=
-"<div class='kaali'><b>KAALI:</b> "+data.reply+"</div>";
+
+"<div class='kaali'>"+data.reply+"</div>";
 
 box.scrollTop=box.scrollHeight;
 
 }
 
 
-/* ===== ENTER ===== */
+/* Female Spiritual Voice */
 
-document.getElementById("input")
-.addEventListener("keydown",e=>{
-if(e.key==="Enter") send();
-});
+function speak(text){
 
+text=text.replace(/[^\w\s.,]/gi,'');
 
-/* ===== VOICE INPUT ===== */
+let speech=new SpeechSynthesisUtterance(text);
 
-function voiceInput(){
+let voices=speechSynthesis.getVoices();
 
-const SpeechRecognition=
-window.SpeechRecognition||
-window.webkitSpeechRecognition;
+speech.voice=
 
-const recog=new SpeechRecognition();
+voices.find(v=>
 
-recog.lang="en-IN";
+v.name.includes("Female") ||
+v.name.includes("Zira") ||
+v.name.includes("Google UK English Female")
 
-recog.start();
+);
 
-recog.onresult=e=>{
+speech.rate=0.9;
 
-document.getElementById("input").value=
-e.results[0][0].transcript;
+speech.pitch=1.2;
 
-send();
+speech.volume=1;
 
-};
+speechSynthesis.speak(speech);
 
 }
 
 
-/* ===== KAALI VOICE ===== */
+/* Voice Input */
 
-function speakLast(){
+let rec;
 
-let speech=new SpeechSynthesisUtterance(lastReply);
+if(window.webkitSpeechRecognition){
 
-speech.lang="en-IN";
+rec=new webkitSpeechRecognition();
 
-speech.rate=1;
+rec.lang="en-IN";
 
-speech.pitch=1.1;
+rec.onresult=e=>{
 
-speechSynthesis.speak(speech);
+document.getElementById("input").value=
+e.results[0][0].transcript;
+
+}
+
+}
+
+function record(){
+
+rec.start();
 
 }
 
 </script>
 
 </body>
+
 </html>
