--- a/index.html
+++ b/index.html
@@ -13,123 +13,85 @@
 
 html,body{
 margin:0;
-padding:0;
+height:100%;
 background:black;
 color:white;
 font-family:Arial;
-height:100%;
+overflow:hidden;
 }
 
-/* AUTO ADAPT SIZE */
+/* Container */
 
 .container{
-
-width:100%;
 height:100%;
-
-max-width:900px;
-margin:auto;
-
 display:flex;
 flex-direction:column;
-
 }
 
-/* HEADER */
+/* Header */
 
 .header{
-
 text-align:center;
 padding:10px;
 border-bottom:1px solid #222;
-
 }
 
 .logo{
-width:70px;
-animation:glow 3s infinite;
+width:60px;
 }
 
 .title{
 color:gold;
-font-size:22px;
+font-size:20px;
 }
 
-/* CHAT */
+/* Chat */
 
 #messages{
-
 flex:1;
 overflow:auto;
-padding:15px;
-
+padding:10px;
 }
 
-
-/* USER */
+/* Messages */
 
 .user{
-
 background:#222;
 padding:10px;
-border-radius:12px;
-margin:8px;
-
+margin:6px;
+border-radius:10px;
 }
-
-
-/* KAALI */
 
 .kaali{
-
 background:black;
 border-left:4px solid gold;
-
 padding:10px;
-border-radius:12px;
-margin:8px;
-
+margin:6px;
+border-radius:10px;
 }
 
-
-/* LINKS */
-
-.kaali a{
-
-color:#3cc6ff;
-font-weight:bold;
-text-decoration:none;
-
-}
-
-/* INPUT */
+/* Input */
 
 .inputArea{
-
 display:flex;
 padding:10px;
 border-top:1px solid #222;
-
 }
 
 input{
-
 flex:1;
-padding:12px;
+padding:10px;
 border-radius:10px;
 border:none;
-
 }
 
 button{
-
 background:gold;
 border:none;
-padding:12px 18px;
+padding:10px;
 margin-left:6px;
 border-radius:10px;
 cursor:pointer;
-
 }
 
 </style>
@@ -137,7 +99,6 @@ cursor:pointer;
 </head>
 
 <body>
-
 
 <div class="container">
 
@@ -149,9 +110,7 @@ cursor:pointer;
 
 </div>
 
-
 <div id="messages"></div>
-
 
 <div class="inputArea">
 
@@ -168,7 +127,145 @@ cursor:pointer;
 </div>
 
 
-<script src="chat.js"></script>
+<script>
+
+/* Greeting */
+
+let history=[{
+
+role:"assistant",
+
+content:"✨ Namaste. I am KAALI — the mystical guide of DEJOIY. How may I assist you?"
+
+}];
+
+
+document.getElementById("messages").innerHTML=
+
+"<div class='kaali'>✨ Namaste. I am KAALI — the mystical guide of DEJOIY. How may I assist you?</div>";
+
+
+
+async function send(){
+
+let input=document.getElementById("input");
+
+let msg=input.value;
+
+if(!msg) return;
+
+input.value="";
+
+
+let box=document.getElementById("messages");
+
+
+box.innerHTML+=
+
+"<div class='user'>"+msg+"</div>";
+
+
+history.push({
+
+role:"user",
+content:msg
+
+});
+
+
+box.innerHTML+=
+
+"<div class='kaali'>KAALI is thinking...</div>";
+
+box.scrollTop=999999;
+
+
+let res=await fetch("/api/chat",{
+
+method:"POST",
+
+headers:{
+"Content-Type":"application/json"
+},
+
+body:JSON.stringify({
+
+messages:history
+
+})
+
+});
+
+
+let data=await res.json();
+
+
+box.removeChild(box.lastChild);
+
+
+history.push({
+
+role:"assistant",
+content:data.reply
+
+});
+
+
+box.innerHTML+=
+
+"<div class='kaali'>"+data.reply+"</div>";
+
+box.scrollTop=999999;
+
+}
+
+
+/* Voice */
+
+function speak(text){
+
+let t=text.replace(/[^\w\s]/gi,'');
+
+let u=new SpeechSynthesisUtterance(t);
+
+u.rate=0.9;
+u.pitch=1.3;
+
+speechSynthesis.speak(u);
+
+}
+
+
+function speakLast(){
+
+let last=history[history.length-1].content;
+
+speak(last);
+
+}
+
+
+/* Voice input */
+
+function startVoice(){
+
+let rec=new webkitSpeechRecognition();
+
+rec.lang="en-IN";
+
+rec.onresult=e=>{
+
+document.getElementById("input").value=
+e.results[0][0].transcript;
+
+};
+
+rec.start();
+
+}
+
+</script>
 
 </body>
+
 </html>
